# soroban-policies

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/agent-spend-policy/: Cargo.toml
contracts/agent-spend-policy-v2/: Cargo.toml  Makefile
contracts/agent-spend-policy-v2/src/: lib.rs
contracts/agent-spend-policy-v2/test_snapshots/test/: test_approve_counted_against_limit.1.json  test_approve_cumulative_with_transfer.1.json  test_approve_day_rollover_resets.1.json  test_approve_over_limit_rejected.1.json  test_approve_paused_rejected.1.json  test_approve_unknown_token_rejected.1.json  test_approve_with_cached_price.1.json  test_approve_zero_amount_allowed.1.json  test_batch_approve_exceeds_limit.1.json  test_batch_set_prices.1.json  test_day_rollover_resets_spend.1.json  test_exact_limit_amount.1.json  test_mixed_transfer_and_approve_in_batch.1.json  test_non_gated_op_always_allowed.1.json  test_non_gated_ops_still_pass.1.json  test_pause_blocks_all_transfers.1.json  test_per_wallet_independent_limits.1.json  test_router_exec_with_approve_counted.1.json  test_same_day_different_ledgers.1.json  test_usdc_cumulative_spend.1.json  test_usdc_transfer_over_limit.1.json  test_usdc_transfer_within_limit.1.json  test_v4_router_mixed_tokens_summed.1.json  test_v4_router_transfer_plus_fee_both_counted.1.json  test_xlm_with_cached_price.1.json  test_zero_amount_transfer.1.json
contracts/agent-spend-policy/src/: lib.rs
contracts/agent-spend-policy/test_snapshots/test/: test_day_rollover_resets_spend.1.json  test_double_init_panics.1.json  test_set_limit.1.json  (+11 more)
(+1 files in other folders)
